--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-slate
+title: cucthesis
+description: 中国传媒大学毕业论文LaTeX模板
+show_downloads: true
+github:
+  zip_url: https://github.com/blueloveTH/cucthesis/releases/latest
+  tar_url: https://github.com/blueloveTH/cucthesis/releases/latest
